force-app/main/default/objects/df_160_fuldmgtige__c/df_160_fuldmgtige__c.object-meta.xml
<CustomObject>
    <label>Fuldmægtige</label>
    <nameField>
        <label>Fuldmægtige Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fuldmægtiges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>