force-app/main/default/objects/df_160_fuldmgtige__c/fields/fuldm_ansvarsomrder__c.field-meta.xml
<CustomField>
    <fullName>fuldm_ansvarsomrder__c</fullName>
    <label>Ansvarsområder</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>fuldm_ansv_kun_konomisk</fullName>
                <label>Kun økonomiske forhold</label>
            </value>
            <value>
                <fullName>fuldm_ansv_kun_personlige</fullName>
                <label>Kun personlige forhold</label>
            </value>
            <value>
                <fullName>fuldm_ansv_pers_og_konomi</fullName>
                <label>Både personlige- og økonomiske forhold</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>