force-app/main/default/objects/df_160_fuldmgtige__c/fields/fuldmgtige_for_p1__c.field-meta.xml
<CustomField>
    <fullName>fuldmgtige_for_p1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fuldmægtig for Person 1</label>
    <type>Checkbox</type>
</CustomField>