force-app/main/default/objects/df_160_fuldmgtige__c/fields/hf_begrnsede_forhold_p1__c.field-meta.xml
<CustomField>
    <fullName>hf_begrnsede_forhold_p1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HF - Begrænsede forhold P1</label>
    <type>Checkbox</type>
</CustomField>