force-app/main/default/objects/df_160_fuldmgtige__c/fields/p1_ff_ansv_pers_forh__c.field-meta.xml
<CustomField>
    <fullName>p1_ff_ansv_pers_forh__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Personlige forhold1</label>
    <type>Checkbox</type>
</CustomField>