force-app/main/default/objects/df_160_fuldmgtige__c/fields/p2_ff_ansv_forh_virks__c.field-meta.xml
<CustomField>
    <fullName>p2_ff_ansv_forh_virks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Virksomhedsforhold2</label>
    <type>Checkbox</type>
</CustomField>