force-app/main/default/objects/df_160_fuldmgtige__c/fields/primr_fuldmgtige_for_p2__c.field-meta.xml
<CustomField>
    <fullName>primr_fuldmgtige_for_p2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primær fuldmægtig for person 2</label>
    <type>Checkbox</type>
</CustomField>