force-app/main/default/objects/df_160_fuldmgtige__c/fields/subs_fuldmgtige_for_p1__c.field-meta.xml
<CustomField>
    <fullName>subs_fuldmgtige_for_p1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subsidiær fuldmægtig for Person  be5d2</label>
    <type>Checkbox</type>
</CustomField>