force-app/main/default/objects/df_160_fuldmgtige__c/fields/vlg_fuldmgtig_for_person_1__c.field-meta.xml
<CustomField>
    <fullName>vlg_fuldmgtig_for_person_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vælg fuldmægtig for Person 1</label>
    <referenceTo>df_160_person__c</referenceTo>
    <relationshipLabel>vlg_fuldmgtig_for_person_1</relationshipLabel>
    <relationshipName>vlg_fuldmgtig_for_person_1</relationshipName>
    <type>Lookup</type>
</CustomField>