force-app/main/default/objects/df_160_fuldmgtige__c/fields/vlg_fuldmgtig_for_person_2__c.field-meta.xml
<CustomField>
    <fullName>vlg_fuldmgtig_for_person_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vælg fuldmægtig for Person 2</label>
    <referenceTo>df_160_person__c</referenceTo>
    <relationshipLabel>vlg_fuldmgtig_for_person_2</relationshipLabel>
    <relationshipName>vlg_fuldmgtig_for_person_2</relationshipName>
    <type>Lookup</type>
</CustomField>