force-app/main/default/objects/df_160_fuldmgtige__c/fields/vlg_prim_fuldmgtig_for_p2__c.field-meta.xml
<CustomField>
    <fullName>vlg_prim_fuldmgtig_for_p2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vælg primær fuldmægtig</label>
    <referenceTo>df_160_person__c</referenceTo>
    <relationshipLabel>vlg_prim_fuldmgtig_for_p2</relationshipLabel>
    <relationshipName>vlg_prim_fuldmgtig_for_p2</relationshipName>
    <type>Lookup</type>
</CustomField>