force-app/main/default/objects/df_160_fuldmgtige__c/fields/vlg_subs_fuldmgtig_for_p1__c.field-meta.xml
<CustomField>
    <fullName>vlg_subs_fuldmgtig_for_p1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vælg subsidiær fuldmægtig</label>
    <referenceTo>df_160_person__c</referenceTo>
    <relationshipLabel>vlg_subs_fuldmgtig_for_p1</relationshipLabel>
    <relationshipName>vlg_subs_fuldmgtig_for_p1</relationshipName>
    <type>Lookup</type>
</CustomField>